drop breaking mixins.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -54,7 +54,6 @@
 @import "./mixins.less";
 @import "./utilities.less";
 @import "./overrides.less";
-@import "./jquery.mentionsInput.less";
 @import "./navbar.less";
 
 @import "./base/layout.less";
@@ -66,3 +65,5 @@
 @import "./layout/show_ad.less";
 @import "./layout/user.less";
 @import "./layout/notification.less";
+@import "./jquery.mentionsInput.less";
+@import "./typeahead-bootstrap.less";
