--- a/src/Adstacy/AppBundle/Resources/public/less/typeahead-bootstrap.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/typeahead-bootstrap.less
@@ -1,9 +1,13 @@
+@import "./variables.less";
+
 .typeahead,
 .tt-query,
 .tt-hint {
-  width: 396px;
-  padding: 8px 12px;
-  border: 2px solid #ccc;
+  width: 100%;
+  height: 50px;
+  padding: 10px 35px 10px 15px;
+  border: solid transparent;
+  border-width: 0 1px;
   outline: none;
 }
 
@@ -12,7 +16,7 @@
 }
 
 .typeahead:focus {
-  border: 2px solid #0097cf;
+  // border: 2px solid #0097cf;
 }
 
 .tt-query {
@@ -26,27 +30,31 @@
 }
 
 .tt-dropdown-menu {
-  width: 422px;
-  margin-top: 12px;
-  padding: 8px 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-          box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  // .dropdown-menu();
+  width: 100%;
+}
+
+.tt-dropdown-header {
+  font-weight: 300;
+  font-size: 24px;
+  padding: 0 12px 6px;
+  border-bottom: 1px solid @border-color;
+  text-align: center;
 }
 
 .tt-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
-  line-height: 24px;
+  padding: 6px 12px;
+  font-size: 16px;
+  line-height: 1;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .tt-suggestion.tt-is-under-cursor {
   color: #fff;
-  background-color: #0097cf;
-
+  background-color: #eee;
 }
 
 .tt-suggestion p {
