--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -90,6 +90,12 @@
   box-shadow: 0 1px 1px rgba(0,0,0,0.1) inset;
 }
 
+#ytplayer {
+  img {
+    max-width: 446px;
+  }
+}
+
 @media screen and (max-width: @screen-tablet) {
   #create-advert {
     width: 100%;
