--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -16,10 +16,10 @@ body {
 
 .open {
   > .site-menu {
-    width: 240px;
+    width: 200px;
   }
   > .site-content {
-    margin-left: 240px;
+    margin-left: 200px;
   }
 }
 
@@ -33,50 +33,44 @@ body {
   width: 0;
   height: ~"@{height}";
   border-right: 1px solid @border-color;
+  border-left: 1px solid @border-color;
+  border-top: 2px solid #b00;
   overflow: hidden;
   z-index: @zindex-sidebar;
   .transition(width ease .5s);
+  background-color: #fff;
 }
 
 .site-menu-inner {
-
-  .site-main-menu a {
-    font-size: 14px;
-  }
-
   ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    
+    h3 {
+      font-size: 14px;
+      color: #aaa;
+      margin-bottom: 0;
+      font-weight: bold;
+    }
+    
+    a {
+      font-size: 13px;
+      color: #777;
+      display: block;
+      text-decoration: none;
+      &:hover {
+        background-color: #ddd;
+      }
+    }
+
+    h3, a {
+      text-align: left;
+      padding: 5px 20px;
+    }
 
     &:last-child {
       margin-bottom: 20px;
-    }
-
-    > li {
-      > h3, a {
-        text-align: right;
-        padding: 5px 30px;
-        color: #333;
-      }
-      > h3 {
-        margin-bottom: 0;
-      }
-      > a {
-        &:hover {
-          background: rgba(0,0,0,0.2);
-          box-shadow: inset 0 -1px rgba(0,0,0,0);
-          color: #fff;
-        }
-
-        font-size: 10px;
-        text-shadow: 0 0 1px rgba(0,0,0,0.1);
-        display: block;
-        text-shadow: 0 0 1px rgba(255,255,255,0.1);
-        font-weight: 400;
-        text-decoration: none;
-        .transition(~"background .3s, box-shadow .3s");
-      }
     }
   }
 }
@@ -110,7 +104,7 @@ body {
 .site-sidebar {
   display: none;
   float: left;
-  width: 240px;
+  width: 200px;
 }
 
 .site-aside {
@@ -129,6 +123,18 @@ body {
   display: inline;
 }
 
+.navbar {
+  border: 0;
+}
+
+#site-header {
+  background: #fff;
+  .navbar-header {
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+  }
+}
+
 .site-header a span {
   display: none;
 }
@@ -139,12 +145,9 @@ body {
 }
 
 .navbar-brand {
-  padding: 15px 0;
-}
-
-.navbar-inverse .navbar-nav > li > a {
-  border-right: 1px solid @navbar-inverse-border;
-  .box-shadow(inset -1px 0 0 rgba(255,255,255,.1));
+  color: #b00;
+  padding: 15px 20px;
+  width: 198px;
 }
 
 @media (min-width: 481px) {
@@ -170,7 +173,7 @@ body {
   }
 
   .site-menu {
-    width: 240px;
+    width: 200px;
   }
 
   .site-adverts {
@@ -285,14 +288,7 @@ body {
 }
 
 #btn-search {
-  border-left: 1px solid #080808;
   .box-shadow(inset 0 0 1px 1px rgba(255,255,255,.1));
-}
-
-.navbar-brand {
-  height: 50px;
-  text-align: center;
-  // background: url("../img/logo.png") no-repeat center;
 }
 
 /** Hide header mobile components **/
