--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -52,6 +52,7 @@ body {
       color: #aaa;
       margin-bottom: 0;
       font-weight: bold;
+      padding: 5px 20px;
     }
     
     a {
@@ -62,10 +63,6 @@ body {
       &:hover {
         background-color: #ddd;
       }
-    }
-
-    h3, a {
-      text-align: left;
       padding: 5px 20px;
     }
 
