--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -33,6 +33,16 @@
   }
 }
 
+.advert-text {
+  background: #333;
+  color: #fff !important;
+  padding: 15px;
+  h3 {
+    text-align: center;
+    margin: 0 0 15px 0;
+  }
+}
+
 .advert-tags {
   // .text-overflow();
 }
@@ -48,10 +58,12 @@
 }
 
 .advert-action {
+  background: #f2f2f2;
   border-top: 1px solid @border-color;
 
   .btn {
     height: 46px;
+    border-bottom: 0;
   }
 
   .pull-left .btn {
@@ -134,31 +146,34 @@
 
 }
 
-// OLD
-.user-mini {
-  .user-desc {
-    width: 100px;
-    line-height: 1;
-    float: left;
-  }
+.advert-user {
   .profile-picture {
     float: left;
     margin-right: 10px;
+  }
+  .advert-date {
+    float: right;
+  }
+  .date {
+    color: #aaa;
+    font-size: 12px;
   }
   .profile-picture-img {
     width: 30px;
     height: 30px;
   }
-  .user-label {
-    color: #aaa;
-    font-size: 11px;
+  .user-desc {
+    margin-top: 3px;
   }
-  .user-realname {
+  a.user-realname {
+    float: left;
     font-size: 13px;
     font-weight: bold;
     margin-bottom: 4px;
-  }
-  .user-realname-a {
     color: @gray;
+    text-decoration: none;
+    .username {
+      color: #bbb;
+    }
   }
 }
