--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -71,6 +71,10 @@
   }
 }
 
+#user-profile + div {
+  margin-top: 15px;
+}
+
 #user-profile-menu {
   background-color: #f5f5f5;
   border-top: 1px solid #dfdfdf;
