--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -162,6 +162,7 @@
       </script>
       {% endif %}
       {% javascripts filter='uglifyjs2'
+        '@AdstacyAppBundle/Resources/public/js/templates.js'
         '@AdstacyAppBundle/Resources/public/js/app/*'
       %}
         <script src="{{ asset_url }}" type="text/javascript"></script>
