--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -129,6 +129,16 @@
       margin: 0;
     }
   }
+  .realname {
+    font-size: 13px;
+  }
+  .username {
+    font-size: 12px;
+  }
+  time {
+    font-size: 11px;
+    color: #999;
+  }
 }
 
 .btn-comments-count {
@@ -165,15 +175,10 @@
   .user-desc {
     margin-top: 3px;
   }
-  a.user-realname {
+  a.realname {
     float: left;
     font-size: 13px;
     font-weight: bold;
     margin-bottom: 4px;
-    color: @gray;
-    text-decoration: none;
-    .username {
-      color: #bbb;
-    }
   }
 }
