--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -47,6 +47,19 @@
   }
 }
 
+a.realname, a.username {
+  text-decoration: none;
+}
+.realname {
+  color: @gray;
+  font-weight: bold;
+}
+
+.username {
+  color: #bbb;
+  font-weight: bold;
+}
+
 #user-profile {
   .media {
     padding: 10px;
