Add ajax commenting.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,7 +92,7 @@
     {% endif %}
   </head>
 
-  <body class="{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %} logged-in {% endif %}">
+  <body class="{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %} logged-in {% endif %}" {% if app.user %}data-user="{{app.user|serialize('json')}}"{% endif %}>
     {% block body %}
       {% block header %}
         {% include '::header.html.twig' %}
@@ -162,6 +162,7 @@
       </script>
       {% endif %}
       {% javascripts filter='uglifyjs2'
+        '@AdstacyAppBundle/Resources/public/js/adstacy.js'
         '@AdstacyAppBundle/Resources/public/js/templates.js'
         '@AdstacyAppBundle/Resources/public/js/app/*'
       %}
