--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -104,7 +104,7 @@
   {% endif %}
 
   {% if app.user %}
-    <div class="advert-comment">
+    <div class="advert-comments">
       {% for comment in ad.comments %}
         <div class="media">
           <div class="pull-left">
