import css on less to minimize number of request.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -2,7 +2,7 @@
 
 // Core variables and mixins
 @import "./variables.less";
-@import "@{path}/mixins.less";
+@import "./mixins.less";
 
 // Reset
 @import "@{path}/normalize.less";
@@ -51,13 +51,11 @@
 // @import "@{path}/responsive-utilities.less";
 
 // Custom theme
-@import "./mixins.less";
 @import "./utilities.less";
 @import "./overrides.less";
-@import "./jquery.mentionsInput.less";
 @import "./navbar.less";
-
 @import "./base/layout.less";
+
 @import "./module/image-preview.less";
 @import "./module/dropdown-box.less";
 @import "./layout/site-header.less";
@@ -66,3 +64,10 @@
 @import "./layout/show_ad.less";
 @import "./layout/user.less";
 @import "./layout/notification.less";
+@import "./jquery.mentionsInput.less";
+@import "./typeahead-bootstrap.less";
+
+@import (less) "../css/mention.css";
+@import (less) "../css/social-buttons.css";
+@import (less) "../css/adstacy.css";
+@import (less) "../css/ui.totop.css";
