--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -59,10 +59,10 @@
       </div>
       <div id="landing-social" class="wrapper">
         <a href="https://www.facebook.com/adstacycom" class="btn btn-facebook btn-lg">
-          <span class="icon-facebook"></span> Like us on Facebook
+          <i class="icon icon-facebook"></i> Like us on Facebook
         </a>
         <a href="https://www.twitter.com/adstacycom" class="btn btn-twitter btn-lg">
-          <span class="icon-twitter"></span> Follow us on Twitter
+          <i class="icon icon-twitter"></i> Follow us on Twitter
         </a>
       </div>
     </div>
