--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -19,6 +19,35 @@ a.mention:hover {
   text-decoration: none;
 }
 
+.btn-social {
+  position: relative;
+  text-align: left;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.3);
+  padding: 6px 12px 6px 53px;
+  .box-shadow(inset 0 0 2px rgba(255,255,255,.5));
+
+  .icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    padding: 8px 12px;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.3), 0 0 5px rgba(255,255,255,.5);
+    border-right: 1px solid rgba(255,255,255,.2);
+    background-color: rgba(255,255,255,.05);
+    .box-shadow(1px 0 1px rgba(0,0,0,.2));
+  }
+}
+
+.btn-social.btn-lg {
+  padding: 10px 16px 10px 70px;
+
+  .icon {
+    font-size: 21px;
+    padding: 11px 16px;
+  }
+}
+
 // hack to support windows phone 8 and IE 10 for media queries
 @-webkit-viewport   { width: device-width; }
 @-moz-viewport      { width: device-width; }
