resize site menu to 200px.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,4 +1,4 @@
-<header id="site-header" class="site-header navbar navbar-fixed-top">
+<header id="site-header" class="site-header navbar navbar-default navbar-fixed-top">
   <nav class="site-wrapper">
     <div class="navbar-header navbar-left">
       <a id="site-menu-toggle" href="#" class="navbar-toggle">
