--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -5,8 +5,8 @@
   position: absolute;
   right: 10px;
   top: 5px;
-  z-index: 2000;
-  border: 2px solid @navbar-inverse-bg;
+  z-index: @zindex-navbar-fixed;
+  border: 2px solid @navbar-default-bg;
   font-size: 10px;
   padding: 2px;
   min-width: 20px;
