--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -20,210 +20,13 @@
 {% endblock %}
 
 {% block content %}
-  {% set user = ad.user %}
-
   {% if not ad.active %}
   <div class="adstacy-container">
     <div class="alert alert-danger">{{"ads.blocked"|trans({'%url%': path('adstacy_app_page_show', {key: 'page'})})|raw }}</div>
   </div>
+  {% else %}
+    {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad, comments: comments, view: false} %}
   {% endif %}
-
-  <div id="show-advert">
-    <div id="show-advert-content">
-      <div class="panel panel-default">
-        <div id="show-advert-toolbar" class="panel-body">
-          {% if app.user %}
-            <div class="promote-action btn-group btn-group-sm">
-              {% set promoted = app.user.hasPromote(ad) %}
-              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote promote {% if promoted %}hide{% endif %}">
-                <i class="icon-bullhorn"></i>
-                <span class="text">Promote</span>
-              </a>
-              <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-success btn-promote unpromote {% if not promoted %}hide{% endif %}">
-                <i class="icon-bullhorn"></i>
-                <span class="text">Promoted</span>
-              </a>
-              <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}" class="btn btn-default promotes-count">
-                <span class="promotes-count">{{ ad.promoteesCount }}</span>
-              </a>
-            </div>
-          {% else %}
-            <div class="btn-group btn-group-sm">
-              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote">
-                <i class="icon-bullhorn"></i> Promote
-              </a>
-              <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}" class="btn btn-default promotes-count">
-                <span class="promotes-count">{{ ad.promoteesCount }}</span>
-              </a>
-            </div>
-          {% endif %}
-
-          {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
-          {% set tags = ad.tags|join(',') %}
-          {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
-          {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
-          {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
-
-          <a href="{{ twitterUrl }}" class="tweet btn btn-twitter btn-sm">
-            <i class="icon-twitter"></i> <span class="social-label">Tweet</span>
-          </a>
-          <a href="{{ facebookUrl }}" class="facebook-share btn btn-facebook btn-sm">
-            <i class="icon-facebook"></i> <span class="social-label">Share</span>
-          </a>
-          <a href="{{ path('adstacy_app_ad_report', {id: ad.id}) }}" class="btn btn-info btn-sm">
-            <i class="icon-info"></i> <span class="social-label">Report</span>
-          </a>
-          {% include 'AdstacyAppBundle:Admin:block_action.html.twig' with {object: ad} %}
-          {% if app.user == user %}
-            <div class="owner-action btn-group btn-group-sm pull-right">
-              <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-success"><i class="icon-edit"></i><span class="owner-action-label">{{ "edit"|trans }}</span></a>
-              <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary"><i class="icon-delete"></i><span class="owner-action-label">{{ "delete"|trans }}</span></a>
-            </div>
-          {% endif %}
-        </div>
-
-        {% if ad.type == 'image' %}
-        <div id="show-advert-img">
-          {% set src = vich_uploader_asset(ad, 'image') %}
-          <img src="{{ src }}" alt="{{ ad.description }}" width="{{ ad.imageWidth }}" height="{{ ad.imageHeight }}">
-        </div>
-        {% elseif ad.type == 'text' %}
-          <h2>{{ ad.title }}</h2>
-        {% elseif ad.type == 'youtube' %}
-          <div class="advert-video" data-youtube-id="{{ ad.youtubeId }}">
-            <a href="#">
-              <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
-                data-original="http://img.youtube.com/vi/{{ ad.youtubeId }}/0.jpg"
-                width="{{ thumb_width }}" height="{{ thumb_width }}"
-              >
-            </a>
-            <div class="yt-player"></div>
-          </div>
-        {% endif %}
-      </div>
-
-      <div id="show-advert-comment" class="panel panel-default">
-        <div class="panel-body">
-          <div id="show-advert-comment-list">
-            <div class="media comment" id="show-advert-desc">
-              <div class="pull-left">
-                <img src="{{ profile_pic(ad.user) }}" alt="{{ ad.user.realname }}" width="60" height="60" class="media-object">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">
-                  <a href="{{ path('adstacy_app_user_profile', {username: ad.user.username}) }}">{{ ad.user.realName }}</a>
-                  <small>@{{ ad.user.userName }}</small>
-                  <time>~ {{ ago(ad.created) }}</time>
-                </h4>
-                <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
-              </div>
-            </div>
-            {% if ad.commentsCount > comments|length %}
-              <a href="#">{{"comment.load_more"|trans}}</a>
-            {% endif %}
-            {% set adOwner = app.user == ad.user %}
-            {% for comment in comments %}
-              {% set commentUser = comment.user %}
-              <div class="media comment" id="comments-{{ comment.id }}">
-                <div class="pull-left">
-                  <img src="{{ profile_pic(commentUser) }}" alt="{{ commentUser.realname }}" width="60" height="60" class="media-object">
-                </div>
-                <div class="media-body">
-                  {% if adOwner or commentUser == app.user %}
-                  <a href="#" data-href="{{ path('adstacy_app_ad_comment_delete', {id: comment.id}) }}" data-toggle="modal" data-target="#delete-comment-modal" class="close" title="{{"delete"|trans}}">×</a>
-                  {% endif %}
-                  <h4 class="media-heading">
-                    <a href="{{ path('adstacy_app_user_profile', {username: commentUser.username}) }}">{{ commentUser.realName }}</a>
-                    <small>@{{ commentUser.userName }}</small>
-                    <time>~ {{ ago(comment.created) }}</time>
-                  </h4>
-                  <p>{{ parse_url(parse_hashtag(parse_mention(comment.content))) }}</p>
-                </div>
-              </div>
-            {% endfor %}
-          </div>
-          {% if app.user %}
-            {# id=comments only used for link anchor #}
-            <div id="comments">
-              {% for flash in app.session.flashbag.get('comment.warning') %}
-                <div class="alert alert-warning">{{ flash }}</div>
-              {% endfor %}
-              {{ form_start(form) }}
-                <div class="form-group">
-                  {{ form_widget(form.content, { attr: { class: 'comment-box' } }) }}
-                </div>
-                <input type="submit" value="{{"comment"|trans}}" class="hide">
-                {{ form_rest(form) }}
-              {{ form_end(form) }}
-            </div>
-          {% endif %}
-        </div>
-      </div>
-    </div>
-
-    <div id="show-advert-owner">
-      <div class="panel panel-default">
-        <div class="panel-body clearfix">
-          {% include 'AdstacyAppBundle:User:user_mini.html.twig' with { user: user, text: ago(ad.created) } %}
-        </div>
-        {% if user.about %}
-        <div id="user-about" class="panel-body">
-          <p class="hyphens">{{ parse_url(parse_hashtag(user.about)) }}</p>
-        </div>
-        {% endif %}
-
-        <div class="panel-body">
-          <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}" class="btn btn-default btn-block" style="margin-bottom: 10px;">{{"more_ads"|trans}}</a>
-            <div class="user-action">
-              {% if app.user %}
-                {% if app.user != user %}
-                  {% set hasFollow = app.user.hasFollowUser(user) %}
-                  <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block follow-user {% if hasFollow %}hide{% endif %}">Follow</a>
-                  <a href="{{ path('adstacy_app_user_unfollow', {username: ad.user.username}) }}" class="btn btn-success btn-block unfollow-user {% if not hasFollow %}hide{% endif %}">Following</a>
-                {% endif %}
-              {% else %}
-                <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block">Follow</a>
-              {% endif %}
-            </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="confirm-modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">{{ "ads.delete.confirm_title"|trans }}</h4>
-        </div>
-        <div class="modal-body">
-          <p>{{ "ads.delete.confirm_message"|trans }}</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">{{ "cancel"|trans }}</button>
-          <a href="{{ path('adstacy_app_ad_delete', {id: ad.id}) }}" class="btn btn-primary">{{ "ads.delete.button"|trans }}</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="delete-comment-modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">{{ "ads.comment.delete.confirm_title"|trans }}</h4>
-        </div>
-        <div class="modal-body">
-          <p>{{ "ads.comment.delete.confirm_message"|trans }}</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">{{ "cancel"|trans }}</button>
-          <button id="delete-comment-btn" class="btn btn-primary">{{ "ads.comment.delete.button"|trans }}</button>
-        </div>
-      </div>
-    </div>
-  </div>
 {% endblock %}
 
 {% block javascripts %}
