Style site-menu

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -49,8 +49,8 @@ body {
     list-style: none;
 
     h3 {
-      font-size: 20px;
-      color: #aaa;
+      font-size: 11px;
+      color: #bbb;
       margin-bottom: 0;
       font-weight: 300;
       padding: 5px 20px;
@@ -58,7 +58,7 @@ body {
 
     a {
       font-size: 13px;
-      color: #777;
+      color: #666;
       display: block;
       text-decoration: none;
       padding: 5px 20px;
