Ajax load more comments.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -142,8 +142,10 @@
   }
 }
 
-.btn-comments-count {
+.load-more-comments {
   border-width: 1px 0 0;
+  background: #eee;
+  height: 33px;
 }
 
 @media (min-width: 481px) {
