Dont show description if text ad.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -107,7 +107,9 @@
         &middot; <time class="timeago" datetime="{{ ad.created|date('c') }}">{{ ad.created|date('F j, Y') }}</span>
       </div>
     </div>
-    <p class="advert-desc">{{ parse_url(ad.description) }}</p>
+    {% if ad.type != 'text' %}
+      <p class="advert-desc">{{ parse_url(ad.description) }}</p>
+    {% endif %}
     <div class="advert-tags">
       {% for tag in ad.tags %}
         <a href="{{ path('adstacy_app_search', {q: tag}) }}">#{{tag}}</a>
