--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -51,17 +51,17 @@ body {
     h3 {
       font-size: 11px;
       color: #bbb;
-      margin-bottom: 0;
+      margin-bottom: 5px;
       font-weight: 300;
       padding: 5px 20px;
     }
 
     a {
-      font-size: 13px;
+      font-size: 12px;
       color: #666;
       display: block;
       text-decoration: none;
-      padding: 5px 20px;
+      padding: 3px 20px;
 
       &:hover {
         background-color: @gray-lighter;
