--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
   <head>
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
     <meta charset="UTF-8">
-    <meta name="Description" content="{{ block('title') }}">
+    <meta name="Description" content="{% block meta_description %}{{ block('title') }}{% endblock %}">
     <meta name="Keywords" content="{% block meta_keywords %}iklan,promo,lowongan kerja,jual beli,diskon,game,movie,kuliner,fashion,buku{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="fb:app_id" content="{{ facebook_app_id }}">
