Add share adstacy url.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -103,6 +103,12 @@
     top: 0;
     background-color: #fff;
   }
+  .url {
+    text-align: center;
+    background-color: #b00;
+    color: #fff;
+    padding: 5px;
+  }
 
   .advert-share, .advert-comment {
     padding: 10px 15px;
